<resources>
    <string name="app_name">Movie Profile</string>
    <!--About Me Profile/Header-->
    <string name="full_name">Kendra Smith</string>
    <string name="profession">Executive Producer</string>
    <string name="email">ksmith@gmail.com</string>
    <!--Action Bar/Drawer Menu-->
    <string name="profile_text">About Me</string>
    <string name="movie_details_text">Movie Details</string>
    <string name="movie_list_text">Movie List</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!--Movie Detail Fragment Fields-->
    <string name="year_title">Year:</string>
    <string name="director_title">Director:</string>
    <string name="stars_title">Stars:</string>
    <string name="runtime_title">Runtime:</string>
    <!--About Me Fragment Fields-->
    <string name="profession_title">Profession:</string>
    <string name="email_title">Email:</string>
    <string name="about_me_title">About Me:</string>
    <string name="about_me_text">Hello! My name is Kendra Smith, and I\'ve been an Executive Producer for 7 years. Feel free to explore some of my favorite movies!</string>
</resources>