<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/light_peach"
    app:cardCornerRadius="10dp"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_picture_view"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/theme_dark_color"
            android:layout_margin="5dp"
            android:layout_width="140dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/theme_dark_color"
                android:layout_margin="5dp"
                android:layout_width="130dp"
                android:layout_height="190dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">
                <ImageView
                    android:src="@drawable/profile_picture"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/profile_picture_view">
            <TextView
                android:text="@string/full_name"
                android:textSize="24sp"
                android:textColor="@color/theme_dark_color"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/profession"
                android:textColor="@color/light_red"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/email"
                android:textColor="@color/light_red"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/about_me_field"
            android:text="@string/about_me_title"
            android:textSize="14sp"
            android:textColor="@color/light_red"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_picture_view" />
        <TextView
            android:text="@string/about_me_text"
            android:textSize="12sp"
            android:textColor="@color/theme_dark_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_me_field" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>